--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "concurrently \"nodemon server.js\""
+    "start": "concurrently \"nodemon server.js\"",
+    "build": "echo 'Build completed'"
   },
   "author": "",
   "license": "ISC",
